# build/docs/swagger.json
@@ -7,6 +7,125 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"ISupplier": {
+				"properties": {
+					"first_name": {
+						"type": "string"
+					},
+					"last_name": {
+						"type": "string"
+					},
+					"gender": {
+						"type": "number",
+						"format": "double"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone_number": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"date_of_birth": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updateAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deleteAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"first_name",
+					"last_name",
+					"gender",
+					"email",
+					"phone_number",
+					"address",
+					"date_of_birth"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SupplierResponse": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/ISupplier"
+					}
+				},
+				"required": [
+					"message",
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"SupplierCreateRequest": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"first_name": {
+						"type": "string"
+					},
+					"last_name": {
+						"type": "string"
+					},
+					"gender": {
+						"type": "number",
+						"format": "double"
+					},
+					"email": {
+						"type": "string"
+					},
+					"phone_number": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"date_of_birth": {
+						"type": "string"
+					},
+					"createAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updateAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deleteAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"name",
+					"first_name",
+					"last_name",
+					"gender",
+					"email",
+					"phone_number",
+					"address",
+					"date_of_birth"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IItem": {
 				"properties": {
 					"name": {
@@ -93,6 +212,35 @@
 		"contact": {}
 	},
 	"paths": {
+		"/v1/supplier": {
+			"post": {
+				"operationId": "CreateSupplier",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/SupplierResponse"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/SupplierCreateRequest"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/v1/product": {
 			"post": {
 				"operationId": "CreateItem",
