# src/controllers/types/supplier-response.ts
@@ -1,0 +1,6 @@
+import { ISupplier } from "@/database/models/supplier.model";
+
+export interface SupplierResponse {
+  message: string;
+  data: ISupplier;
+}
